@@ -88,6 +88,7 @@ export(fixef)
 export(geometric)
 export(get_prior)
 export(hurdle_gamma)
+export(hurdle_lognormal)
 export(hurdle_negbinomial)
 export(hurdle_poisson)
 export(hypothesis)
